Fix slight gap appearing between progress bar background color and border

--- a/src/styles.css
+++ b/src/styles.css
@@ -261,15 +261,16 @@ button:disabled:hover {
 }
 
 .progress-bar-border {
-  border: 2px black solid;
   height: 100%;
   width: 100%;
   border-radius: 1em;
+  box-shadow: 9px 6px 10px #0000007f;
 }
 
 .progress-bar-background {
   width: 100%;
   height: 100%;
+  border: 2px #000000dd solid;
   background-color: #80808077;
   border-radius: 1em;
   overflow: hidden;
@@ -338,6 +339,13 @@ button:disabled:hover {
 
 #incorrect-answer {
   color: red;
+}
+
+/*Extra small device widths*/
+@media (max-width: 325px) {
+  .quizscreen-container {
+    padding-top: 4.5em;
+  }
 }
 
 /* Larger Device Styles */
